--- a/Lab0/main.ipynb
+++ b/Lab0/main.ipynb
@@ -4,7 +4,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Import"
+    "<h1><center>Основи роботи в середовищі Jupyter Notebook</center></h1>\n",
+    "\n",
+    "<h1><center>Мета</center></h1>\n",
+    "<p>\n",
+    "    ознайомитись з особливістю використання мови Python в\n",
+    "    середовищі Jupyter Notebook та отримати навички роботи з блокнотом.\n",
+    "</p>\n",
+    "\n",
+    "<h1><center>Вимоги до завдання</center></h1>\n",
+    "\n",
+    "<ol>\n",
+    "    <li>Встановити Jupyter notebook</li>\n",
+    "    <li>Налаштувати робочу папку</li>\n",
+    "    <li>Виберіть один варіант для цієї лабораторної роботи, використовуючи формулу</li>\n",
+    "    <li>\n",
+    "        За допомогою мови Markdown та HTML тегів для країни, відповідно до\n",
+    "        свого номеру варіанту (див. табл. 1), ввести інформацію щодо площини,\n",
+    "        населення, державного устрою, видатних персоналій, пам’яток культури та\n",
+    "        природи тощо. При оформленні інформації повинні бути використані:\n",
+    "        <ul>\n",
+    "            <li>ироди тощо. При оформленні інформації повинні бути використані</li>\n",
+    "            <li>заголовки різних рівнів</li>\n",
+    "            <li>різні види накреслення символів (курсив, напівжирний тощо)</li>\n",
+    "            <li>символи різних кольорів</li>\n",
+    "            <li>рамки навколо тексту</li>\n",
+    "            <li>таблиці</li>\n",
+    "            <li>вкладені списки</li>\n",
+    "            <li>картинки за допомогою посилань та вбудовані</li>\n",
+    "            <li>гіперпосиланн</li>\n",
+    "            <li>за допомогою HTML тегу svg намалювати флаг країни</li>\n",
+    "        </ul>\n",
+    "    </li>\n",
+    "    <li>\n",
+    "        Створити функцію для реалізації алгоритму, відповідно до номеру свого\n",
+    "        варіанту з табл. 1. Для створеної функції реалізувати 2-3 тестові приклади в\n",
+    "        комірках ноутбуку. Для всіх варіантів організувати контроль значень, що\n",
+    "        вводяться\n",
+    "    </li>\n",
+    "</ol>\n",
+    "\n",
+    "<h1><center>Виконання завдання</center></h1>\n",
+    "\n",
+    "## Варіант"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My variant:  8\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"My variant: \", ord(\"M\") % 10 + 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Імпорт"
    ]
   },
   {
@@ -22,18 +88,20 @@
    "source": [
     "# Грузія\n",
     "\n",
+    "![Герб](https://upload.wikimedia.org/wikipedia/commons/thumb/4/44/Lesser_coat_of_arms_of_Georgia.svg/100px-Lesser_coat_of_arms_of_Georgia.svg.png)\n",
+    "\n",
     "## Загальна інформація\n",
     "- **Площа:** 69,700 квадратних кілометрів\n",
     "- **Населення:** Близько 4 мільйонів\n",
     "- **Державний устрій:** Республіка\n",
-    "- **Столиця:** Тбілісі\n",
+    "- **Столиця:** <span style=\"color:red;\">Тбіісі</span>\n",
     "\n",
     "## Видатні персоналії\n",
     "- **Шота Руставелі:** Видатний грузинський поет.\n",
     "- **Михайло Саакашвілі:** Грузинський політик та бувший президент Грузії.\n",
     "\n",
     "## Пам'ятки культури\n",
-    "- **Светіцховели Собор:** Давній християнський собор в Мцхеті, включений до списку Світової спадщини ЮНЕСКО.\n",
+    "- **Светіцховели Собор:** Давній християнський собор в Мцхеті, включений до списку Світової спадщини *ЮНЕСКО*.\n",
     "- **Нарикала Черкеській Фортеця:** Давньоримська фортеця, яка зараз є музеєм під відкритим небом.\n",
     "\n",
     "## Природа\n",
@@ -93,20 +161,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "My variant:  8\n"
-     ]
-    }
-   ],
    "source": [
-    "print(\"My variant: \", ord(\"M\") % 10 + 1)"
+    "## Функція сортування"
    ]
   },
   {
@@ -129,6 +187,13 @@
     "            index = index - 1\n",
     "  \n",
     "    return arr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Перевірка"
    ]
   },
   {
