--- a/Lab1/main.ipynb
+++ b/Lab1/main.ipynb
@@ -4,7 +4,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Imports"
+    "<h1><center>Дослідження та візуалізація даних за допомогою Python</center></h1>\n",
+    "\n",
+    "<h1><center>Мета</center></h1>\n",
+    "<p>\n",
+    "отримати базові навики використання Python для дослідження та візуалізації даних.\n",
+    "</p>\n",
+    "\n",
+    "<h1><center>Вимоги до завдання</center></h1>\n",
+    "\n",
+    "<ol>\n",
+    "    <li>Встановіть Jupyter notebook через pip або Anaconda Distribution.</li>\n",
+    "    <li>Завантажте russia_losses_equipment.csv файл з сайту Kaggle.com https://www.kaggle.com/datasets/piterfm/2022-ukraine-russian-war</li>\n",
+    "    <li>Виберіть один варіант для цієї лабораторної роботи, використовуючи формулу</li>\n",
+    "    <span>N = ord(\"LLL\") % 3 + 1 <br> де N – це номер варіанту, LLL – це перша літера вашого імені.</span>\n",
+    "    <li>\n",
+    "        Поради:\n",
+    "        <ol type=\"a\">\n",
+    "            <li>Використовуйте csv.reader()функцію для читання файлу csv.</li>\n",
+    "            <li>Пропустіть перший рядок (із заголовками стовпців).</li>\n",
+    "            <li>Не використовуйте цикли чи інші ітераційні конструкції дляобробки масивів numpy. Використовуйте лише зрізи та/абоуніверсальні (векторизовані) функції.</li>\n",
+    "            <li>Створіть функції до завдань 3-7 кожного варіанта.</li>\n",
+    "        </ol>\n",
+    "    </li>\n",
+    "        Вимоги до графіків:\n",
+    "        <ol type=\"a\">\n",
+    "            <li>встановити тип лінії (пунктирна, пунктирна тощо);</li>\n",
+    "            <li>графіки повинні бути підписані;</li>\n",
+    "            <li>додайте легенду;</li>\n",
+    "            <li>додати сітку та вказати колір і тип ліній;</li>\n",
+    "            <li>додайте назву графіку, позначки осей і значення но осях;</li>\n",
+    "            <li>змінити розмір графіку (наприклад, 8x16 дюймів) і розподільну здатність (наприклад, 100 dpi);</li>\n",
+    "            <li>зберегти графік у файл формату png.</li>\n",
+    "        </ol>\n",
+    "    </li>\n",
+    "</ol>\n",
+    "\n",
+    "<h1><center>Виконання завдання</center></h1>\n",
+    "\n",
+    "## Варіант"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"My variant: \", ord(\"M\") % 3 + 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Імпорт бібліотек"
    ]
   },
   {
@@ -22,14 +76,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lab"
+    "## Функції"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_col(filename: str, colname: str):\n",
+    "    return np.array(pd.read_csv(filename)[colname])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Requirements"
+    "## Читання данних"
    ]
   },
   {
@@ -46,23 +110,31 @@
     }
    ],
    "source": [
-    "print(\"My variant: \", ord(\"M\") % 3 + 1)\n",
-    "\n",
-    "def get_col(filename: str, colname: str):\n",
-    "    return np.array(pd.read_csv(filename)[colname])\n",
-    "\n",
     "df = pd.read_csv('res/russia_losses_equipment.csv')\n",
     "df = df.fillna(0)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Створення масиву «APC» (Armored personnel carrier)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Numpy array that contains all of the tank losses\n",
     "APC_losses = get_col('res/russia_losses_equipment.csv', 'APC')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Добові втрати APC"
    ]
   },
   {
@@ -127,6 +199,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5 найбільших добових втрат APC"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 174,
    "metadata": {},
@@ -143,6 +222,13 @@
    "source": [
     "print(\"5 max APC losses per day:\")\n",
     "print(sorted(daily_APC_losses)[-5:])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Кількість APC, знищено влітку 2023 року"
    ]
   },
   {
@@ -168,6 +254,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Середнє значення знищених APC за 100-500 днів війни"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 179,
    "metadata": {},
@@ -187,6 +280,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Графік втрат APC за останні 200 днів"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 194,
    "metadata": {},
@@ -203,7 +303,6 @@
     }
    ],
    "source": [
-    "# plt.subplots(figsize=(16,8))\n",
     "plt.figure(figsize=(16,8))\n",
     "plt.plot(\n",
     "    np.arange(200),\n",
