--- a/Lab1/main.ipynb
+++ b/Lab1/main.ipynb
@@ -47,9 +47,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My variant:  3\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"My variant: \", ord(\"M\") % 3 + 1)"
    ]
@@ -63,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,17 +106,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "My variant:  3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.read_csv('res/russia_losses_equipment.csv')\n",
     "df = df.fillna(0)"
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
     "for i in range(len(daily_APC_losses) - 1):\n",
     "    daily_APC_losses[i] -= daily_APC_losses[i + 1]\n",
     "    \n",
-    "daily_APC_losses = np.flip(np.copy(APC_losses))\n",
+    "daily_APC_losses = np.flip(np.copy(daily_APC_losses))\n",
     "\n",
     "print(\"Daily APC losses:\")\n",
     "print(daily_APC_losses)"
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -242,6 +242,16 @@
      "text": [
       "APC losses in summer 2023:\n",
       "1126\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Mico\\AppData\\Local\\Temp\\ipykernel_16552\\3799682141.py:3: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "  int(df[df['date'] == '2023-08-31']['APC'].values) -\n",
+      "C:\\Users\\Mico\\AppData\\Local\\Temp\\ipykernel_16552\\3799682141.py:4: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "  int(df[df['date'] == '2023-06-01']['APC'].values)\n"
      ]
     }
    ],
@@ -262,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
